# harmonic-shaper

./: BITACORA.md  README.md  pyproject.toml
contracts/: shaper.contract.json  shaper.contract_id.golden
docs/: CLIPPING_DIAGNOSIS.md  NATIVE_MIDI_HARMONIC_BANKS.md  T2.2_EXTRACTION_REPORT.md
src/harmonic_shaper/: __init__.py  __main__.py  api.py  audio_engine.py  audio_levels.py  config.py  harmonic_mapping.py  main.py  midi_control.py  osc_receiver.py  state.py  synth_pure.py  voice_cache.py
tests/: test_audio_smoke.py  test_generator.py  test_harmonic_mapping.py  test_imports.py  test_native_midi.py  test_runtime_surface.py  test_shaper_contract.py  test_state.py  test_synth_pure.py
