[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "harmonic-shaper"
version = "0.1.0"
description = "Canonical additive harmonic synthesizer of the Harmonic Beacon ecosystem"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "fastapi>=0.100",
    "librosa>=0.10",
    "mido>=1.3",
    "numpy>=1.24",
    "python-osc>=1.8",
    "python-rtmidi>=1.5",
    "scipy>=1.10",
    "sounddevice>=0.4",
    "soundfile>=0.12",
    "uvicorn>=0.23",
]
authors = [
    { name = "AlterMundi contributors" },
]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
]

[project.optional-dependencies]
test = [
    "pytest>=8",
]

[project.scripts]
harmonic-shaper = "harmonic_shaper.main:main"
harmonic-shaper-synth-pure = "harmonic_shaper.synth_pure:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
